# rl-course

./: README.md
testbed/: k-armed bandit.ipynb  pyproject.toml
ucl-compm050/easy21/: easy21.py  monte-carlo.py  rules.md
