[tool.poetry]
name = "testbed"
version = "0.1.0"
description = ""
authors = ["Hugh Wimberly <hugh.wimberly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
jupyter = "^1.0.0"
seaborn = "^0.10.1"
scikit-learn = "^0.22.2"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
